--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -85,7 +85,7 @@
             </li>
 
             <li class="user-item row" ng-click="user.goDownloadVideoList()">
-                <i class="icon ion-ios-cloud-download-outline icon-left col col-adaptive"></i>
+                <i class="iconfont icon-lixian icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
                         <span class="item-text col">离线中心</span>
@@ -95,7 +95,7 @@
             </li>
 
             <li class="user-item row" ng-click="user.goViewVideoList()">
-                <i class="icon ion-ios-film-outline icon-left col col-adaptive"></i>
+                <i class="iconfont icon-jilu icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
                         <span class="item-text col">观看记录</span>
