--- a/src/common/templates/tabs.html
+++ b/src/common/templates/tabs.html
@@ -7,12 +7,20 @@
             <ion-nav-view name="index"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="购物车"
+        <!-- <ion-tab title="购物车"
                  icon-on="iconfont icon-shoppingcart"
                  icon-off="iconfont icon-shoppingcart"
                  href="#/tabs/shoppingCart"
                  ng-click="goShoppingCart()">
             <ion-nav-view name="cart"></ion-nav-view>
+        </ion-tab> -->
+
+        <ion-tab title="商城"
+                 icon-on="iconfont icon-shangcheng"
+                 icon-off="iconfont icon-shangcheng"
+                 href="#/tabs/mallIndex"
+                 ng-click="goMallIndex()">
+            <ion-nav-view name="mall"></ion-nav-view>
         </ion-tab>
 
         <ion-tab title="翻一翻"
