商城－搜索结果页

--- a/src/common/templates/mall/mallIndex.html
+++ b/src/common/templates/mall/mallIndex.html
@@ -63,9 +63,9 @@
         </div>
 
         <!-- 搜索 -->
-        <div class="mall-index-search">
+        <div class="mall-search" ng-click="mallIndex.goSearch()">
             <i class="icon ion-ios-search-strong"></i>
-            <input type="text" class="search-input" placeholder="搜索商品" />
+            <div class="search-input">搜索商品</div>
         </div>
 
         <!-- 楼层 -->
