--- a/src/common/resources/sass/pages/_mallIndex.scss
+++ b/src/common/resources/sass/pages/_mallIndex.scss
@@ -72,7 +72,7 @@
     }
 }
 
-.mall-index-search {
+.mall-search {
     position: relative;
     margin: 15px 12px;
 
@@ -90,6 +90,7 @@
         width: 100%;
         height: 40px;
         font-size: 14px;
+        color: $text-color-secondary;
         background-color: $light;
         border-radius: 3px;
         -webkit-appearance: none;
