商城－首页搜索框样式修改／分类页重新进入时置空搜索条件

--- a/src/common/resources/sass/pages/_mallIndex.scss
+++ b/src/common/resources/sass/pages/_mallIndex.scss
@@ -95,6 +95,10 @@
         border-radius: 3px;
         -webkit-appearance: none;
         border: $line-color 1px solid;
+
+        &.index-search {
+            opacity: 0.7;
+        }
     }
 }
 
