--- a/src/common/templates/mall/mallSearchList.html
+++ b/src/common/templates/mall/mallSearchList.html
@@ -1,4 +1,4 @@
-<ion-view title="搜索结果" cm-hide-tabs="true">
+<ion-view title="商品列表" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="title title-center header-item">
-            搜索结果
+            商品列表
         </div>
     </ion-header-bar>
 
