--- a/src/common/templates/shoppingCart.html
+++ b/src/common/templates/shoppingCart.html
@@ -1,4 +1,4 @@
-<ion-view class="shopping-cart-view stable-bg" title="购物车" cm-hide-tabs="false">
+<ion-view class="shopping-cart-view stable-bg" title="购物车" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
