--- a/src/common/templates/index.html
+++ b/src/common/templates/index.html
@@ -16,7 +16,7 @@
             <cm-switch-content>
                 <cm-switch-panel ng-repeat="slider in index.sliderList">
                     <img class="img" cm-lazyload="slider.picUrl" load-immediate="true" 
-                        ng-click="index.goAdvInfo(slider.id)"/>
+                        ng-click="index.goSliderAdv(slider)" />
                 </cm-switch-panel>
             </cm-switch-content>
             <cm-switch-nav class="ui-switch-nav" ng-class="{'nav-hide': (index.sliderList.length <= 1)}"></cm-switch-nav>
