--- a/src/common/resources/sass/pages/_purchasedList.scss
+++ b/src/common/resources/sass/pages/_purchasedList.scss
@@ -12,6 +12,10 @@
         background-color: $light;
     }
 
+    .video-list-item {
+        padding: 8px 12px;
+    }
+
     .item-order-number {
         position: relative;
         padding: 0 12px;
