--- a/src/common/templates/exchangeList.html
+++ b/src/common/templates/exchangeList.html
@@ -33,7 +33,7 @@
         <ul class="exchange-list light-bg">
             <li class="exchange-item clearfix" 
                 ng-repeat="item in exchangeList.list"
-                ng-click="exchangeList.goVideoList(item)">
+                ng-click="exchangeList.goExchangeVideoList(item)">
                 <div class="item-img fl"></div>
                 <div class="item-info">
                     <div class="item-name">{{item.refName}}</div>
