--- a/src/common/templates/exchangeRecordList.html
+++ b/src/common/templates/exchangeRecordList.html
@@ -27,7 +27,7 @@
 
         <ul class="record-list">
             <li class="record-item" ng-repeat="item in exchangeRecordList.list"
-                ng-click="exchangeRecordList.goVideoList(item)">
+                ng-click="exchangeRecordList.goExchangeVideoList(item)">
                 <div class="item-content-row content">{{item.title}}</div>
                 <div class="item-content-row clearfix">
                     <span class="date fr">{{item.exchangedDate}}</span>兑换成功
