--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -104,8 +104,7 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goConsigneeList()"
-                ng-if="!user.bytSwitch">
+            <li class="user-item row" ng-click="user.goConsigneeList()">
                 <i class="iconfont icon-dizhi icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
