--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -43,7 +43,7 @@
 "pages/index",
 "pages/categoryList",
 "pages/productInfo",
-"pages/suitInfo",
+"pages/teacherInfo",
 "pages/freeList",
 "pages/freeInfo",
 "pages/comment",
@@ -86,6 +86,7 @@
 
 "pages/purchasedList",
 "pages/videoInfo",
+"pages/packageVideoList",
 
 "pages/sliderList",
 
