--- a/src/common/resources/sass/pages/_productInfo.scss
+++ b/src/common/resources/sass/pages/_productInfo.scss
@@ -65,6 +65,7 @@
     padding: 12px;
 
     .describe-title {
+        margin-bottom: 5px;
         line-height: 1.5em;
         color: $text-color;
         font-size: 15px;
@@ -197,6 +198,13 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: normal;
+    }
+
+    .comments-empty {
+        padding: 20px 0;
+        text-align: center;
+        font-size: 13px;
+        color: $text-color-quiet;
     }
 
     .comments-more {
