--- a/src/common/templates/packageVideoList.html
+++ b/src/common/templates/packageVideoList.html
@@ -85,8 +85,8 @@
                 </ul>
             </div>
 
-            <!-- 评论 -->
-            <div class="product-info-comments light-bg" ng-if="package.commentsList">
+            <!-- 有评论 -->
+            <div class="product-info-comments light-bg" ng-if="package.commentsList.length > 0">
                 <div class="comments-title">课程评论<span class="amount">({{package.commentsList.length}})</span></div>
                 <ul class="comments-list">
                     <li class="comments-item clearfix" ng-repeat="comment in package.commentsList">
@@ -105,6 +105,12 @@
                     </li>
                 </ul>
                 <!-- <div class="comments-more">查看全部评论 ></div> -->
+            </div>
+
+            <!-- 无评论 -->
+            <div class="product-info-comments light-bg" ng-if="package.commentsList.length == 0">
+                <div class="comments-title">课程评论<span class="amount">(0)</span></div>
+                <div class="comments-empty">暂无评论</div>
             </div>
         </div>
 
