--- a/src/common/templates/productInfo.html
+++ b/src/common/templates/productInfo.html
@@ -76,7 +76,7 @@
                 <div class="describe-btn"></div>
             </div>
 
-            <!-- 点评 -->
+            <!-- 有点评 -->
             <div class="product-info-comments light-bg" ng-if="productInfo.commentsList">
                 <div class="comments-title">点评<span class="amount">({{productInfo.commentsList.length}})</span></div>
                 <ul class="comments-list">
@@ -96,6 +96,12 @@
                     </li>
                 </ul>
                 <!-- <div class="comments-more">查看全部评论 ></div> -->
+            </div>
+
+            <!-- 无评论 -->
+            <div class="product-info-comments light-bg" ng-if="!productInfo.commentsList">
+                <div class="comments-title">点评<span class="amount">(0)</span></div>
+                <div class="comments-empty">暂无点评</div>
             </div>
         </div>
 
