商城图标问题／商城搜索返回时keyword问题

--- a/src/common/resources/sass/_appTabs.scss
+++ b/src/common/resources/sass/_appTabs.scss
@@ -24,6 +24,10 @@
             font-size: 26px;
             line-height: 32px;
         }
+
+        .icon-shangcheng {
+            font-size: 22px;
+        }
     }
 
     .tab-item-active {
