订单详情页－退换货说明文档

--- a/src/common/templates/orderInfo.html
+++ b/src/common/templates/orderInfo.html
@@ -120,7 +120,7 @@
                 <span class="col col-adaptive col-tit">发票内容</span>
                 <span class="col col-txt">不开具发票</span>
             </p>
-            <p class="order-row-cont row">
+            <p class="order-row-cont row" ng-click="orderInfo.shoRefundInfo()">
                 <span class="col col-adaptive col-tit refund-tips">退换货说明</span>
                 <span class="col col-txt"><i class="icon ion-ios-help-outline"></i></span>
             </p>
