--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -71,6 +71,7 @@
 "pages/selectAddressRegion",
 "pages/downloadVideoList",
 "pages/viewVideoList",
+"pages/orderRefundInfo",
 
 "pages/login",
 "pages/register",
