结算中心－发票说明页

--- a/src/common/resources/sass/_checkoutModal.scss
+++ b/src/common/resources/sass/_checkoutModal.scss
@@ -33,6 +33,10 @@
     .icon-back-modal:before {
         font-size: 20px;
     }
+
+    .icon-checkout-invoice-info:before {
+        font-size: 20px;
+    }
 }
 
 // 结算中心公共的弹层样式
