--- a/src/common/resources/sass/pages/_invoice.scss
+++ b/src/common/resources/sass/pages/_invoice.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+// 结算中心－发票内容
 .invoice-panel {
     
     .invoice-row {
@@ -45,6 +46,25 @@
             @extend %font-size-small;
             background: #f1f2f6;
             border-radius: 4px;
+        }
+    }
+}
+
+// 结算中心－发票说明
+.invoice-info-modal-panel {
+
+    .invoice-info {
+        padding: 12px;
+
+        p {
+            line-height: 2em;
+            color: $text-color-secondary;
+            @extend %font-size-base;
+            text-indent: 2em;
+
+            &.info-line {
+                text-indent: 3em;
+            }
         }
     }
 }
